backend-svc-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: backend-app
spec:
  clusterIP: None
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: backend-app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      name: backend-pod
      labels:
        app: backend-app
    spec:
      containers:
        - image: akshayshikre/wp-mysql:latest
          name: mysql
          ports:
            - containerPort: 3306
              name: mysqlport
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /app/. /docker-entrypoint-initdb.d"]
