front2.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: frontend-app
---
apiVersion: extensions/v1beta1
kind: Deployment 
metadata: 
  name: frontend-deploy
  labels:
    app: frontend-app
spec:
  selector:
     matchLabels:
       app: frontend-app
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend-app
    spec:
      containers:
       - image: akshayshikre/wp-php7fpm:latest
         name: wordpress
         ports:
           - containerPort: 9000
             name: wordpressport
         volumeMounts:
           - name: shared-files
             mountPath: /var/www/html
         lifecycle:
           postStart:
             exec:
               command: ["/bin/sh", "-c", "cp -r /app/. /var/www/html"]
       - image: nginx:latest
         name: nginx
         ports:
           - containerPort: 80
             name: web-port
         volumeMounts:
           - name: shared-files
             mountPath: /var/www/html
           - name: nginx-config-volume
             mountPath: /etc/nginx/nginx.conf
             subPath: nginx.conf
      volumes:
       - name: shared-files
         emptyDir: {}
       - name: nginx-config-volume
         configMap:
           name: nginx-config
